# deltafs

./: AUTHORS  Benchmarks.ods  INSTALL  Makefile.in  ProjectHome.md  TODO  commit.sh  config.h.in  configure  install.sh  uninstall.sh
man/: defs.1  dln.1
src/: delta.h  sql-test.c  sql.c  util.c.depreciated  util.h.depreciated
src/dln/: delta.c  delta.h  opts.h
trunk/: NEWS  config.h  configure.in
trunk/src/: delta.c  deltafs.c  opts.c  opts.h  sql.h  version.h
trunk/src/dln/: dln.c  opts.c
